# ldsc

./: .gitignore  CHANGELOG  README.md  dockerfile  environment.yml  ldsc.py  main.py  munge_sumstats.py  noxfile.py  pyproject.toml  setup.py  simulate.py
ldscore/: jackknife.py  parse.py  regressions.py  sumstats.py
old_build_files/: requirements.txt
parsers/: __init__.py  ldsc_parser.py  make_annot_parser.py  munge_sumstats_parser.py
profiles/: profile_hakyi_ldsc_h2.html  profile_hakyi_ldsc_rg.html  profile_hakyi_munge_sumstats.html
refactor/: main.py  make_annot.py  munge_sumstats.py
refactor/annotate/: __init__.py  make_annot.py
refactor/callbacks/: __init__.py  callbacks.py
refactor/ldscore/: ldsc_check_args.py  ldscore.py  parse.py  regressions.py  sumstats.py
refactor/logger/: __init__.py  default_header.py  ldsc_logger.py
refactor/munge_sumstats/: __init__.py  munge_sumstats.py
refactor/parsers/: ldsc_parser.py  make_annot_parser.py  munge_sumstats_parser.py  parser_factory.py  parser_interface.py
refactor/tests/: test_irwls.py  test_ldscore.py  test_regressions.py  test_sumstats.py
src/ldsc/: ldsc.py  main.py
src/ldsc/annotate/: __init__.py  make_annot.py
src/ldsc/callbacks/: __init__.py  callbacks.py
src/ldsc/ldscore/: __init__.py  irwls.py  ldsc_check_args.py  ldscore.py  parse.py  regressions.py  sumstats.py
src/ldsc/logger/: __init__.py  default_header.py  ldsc_logger.py
src/ldsc/munge_sumstats/: __init__.py  check_munge_args.py  munge_sumstats.py
src/ldsc/parsers/: __init__.py  ldsc_parser.py  make_annot_parser.py  munge_sumstats_parser.py  parser_factory.py  parser_interface.py
test/: simulate.py  test_jackknife.py  test_parse.py  test_regressions.py  test_sumstats.py
test/simulate_test/ldscore/: oneld_onefile.l2.M_5_50  oneld_onefile.l2.ldscore  oneld_onefile1.l2.M_5_50  oneld_onefile1.l2.ldscore  oneld_onefile2.l2.ldscore  twold_firstfile.l2.M_5_50  twold_firstfile.l2.ldscore  twold_firstfile1.l2.M_5_50  twold_firstfile1.l2.ldscore  twold_firstfile2.l2.M_5_50  twold_firstfile2.l2.ldscore  twold_onefile.l2.M_5_50  twold_onefile.l2.ldscore  twold_onefile1.l2.M_5_50  twold_onefile1.l2.ldscore  twold_onefile2.l2.ldscore  twold_secondfile.l2.M_5_50  twold_secondfile.l2.ldscore  twold_secondfile1.l2.M_5_50  twold_secondfile1.l2.ldscore  twold_secondfile2.l2.M_5_50  twold_secondfile2.l2.ldscore
test/simulate_test/sumstats/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  (+960 more)
tests/: __init__.py  munge_sumstats.py  simulate.py  test_irwls.py  test_jackknife.py  test_ldscore.py  test_munge_sumstats.py  test_parse.py  test_regressions.py  test_sumstats.py
tests/simulate_test/: 1.cov  1.cov.gencov.cov  1.cov.hsq1.cov  1.cov.hsq2.cov  1.delete  1.delete_vals.gencov.delete  1.delete_vals.hsq1.delete  1.delete_vals.hsq2.delete  1.h2_results  1.part_delete  1.rg_results  rg.rg_results
tests/simulate_test/ldscore/: oneld_onefile.l2.M_5_50  oneld_onefile.l2.ldscore  oneld_onefile1.l2.M_5_50  oneld_onefile1.l2.ldscore  oneld_onefile2.l2.ldscore  twold_firstfile.l2.M_5_50  twold_firstfile.l2.ldscore  twold_firstfile1.l2.M_5_50  twold_firstfile1.l2.ldscore  twold_firstfile2.l2.ldscore  twold_onefile.l2.M_5_50  twold_onefile.l2.ldscore  twold_onefile1.l2.M_5_50  twold_onefile1.l2.ldscore  twold_onefile2.l2.ldscore  twold_secondfile.l2.M_5_50  twold_secondfile.l2.ldscore  twold_secondfile1.l2.ldscore  twold_secondfile2.l2.M_5_50  w.l2.ldscore  (+1 more)
(+1540 files in other folders)
