[project]
name = "ldsc"
version = "2.3.0"
description = "command line tool for estimating heritability and genetic correlation from GWAS summary statistics. `ldsc` also computes LD Scores."
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "bitarray==2.6.0",
    "nose==1.3.7",
    "numpy==1.23.3",
    "pandas==1.5.0",
    "pybedtools==0.9.1",
    "pysam==0.19.1",
    "python-dateutil==2.8.2",
    "pytz==2022.4",
    "scipy==1.9.2",
    "six==1.16.0",
]

[[project.authors]]
name = "Brendan Bulik-Sullivan,Hilary Finucane,James Baker"
email = "james.baker@vanderbilt.edu"

[project.license]
text = "GPL-3.0-only"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "ruff>=0.5.4",
    "nox>=2024.4.15",
]

[tool.pdm.scripts]
test = "python3 -m unittest discover -s tests/ -p *.py"

[tool.pdm.build]
package-dir = "src"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
