[project]
name = "ldsc"
version = "3.0.0"
description = "`ldsc` is a command line tool for estimating heritability and genetic correlation from GWAS summary statistics. `ldsc` also computes LD Scores."
dependencies = [
    "bitarray==2.6.0",
    "nose==1.3.7",
    "numpy==1.23.3",
    "pandas==1.5.0",
    "pysam==0.19.1",
    "python-dateutil==2.8.2",
    "pytz==2022.4",
    "scipy==1.9.2",
    "six==1.16.0",
    "log @ git+https://github.com/jtb324/log.git",
    "rich-argparse>=1.5.2",
    "xopen>=2.0.2",
    "pybedtools==0.9.1",
]
requires-python = ">=3.9"
readme = "README.md"

[[project.authors]]
name = "Brendan Bulik-Sullivan, Hilary Finucane, James Baker"
email = "james.baker@vanderbilt.edu"

[project.license]
text = "GPL-3.0-or-later"

[project.scripts]
ldsc = "ldsc.main:main"

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "nox>=2024.4.15",
    "scalene>=1.5.19",
]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
simulate = "python3 simulate.py"
test = "python3 -m unittest discover -s tests/ -p *.py"
clean = {shell = "rm tests/simulate_test/*.cov && rm tests/simulate_test/*.delete && rm tests/simulate_test/*.part_delete && rm tests/*.h2_results && rm tests/simulate_test/*h2_results && rm tests/simulate_test/*rg_results && rm tests/simulate_test/ldscore/* && rm tests/simulate_test/sumstats/*"}

[tool.pdm.build]
package-dir = "src"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
